<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.detail.DetailActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="20dp">
        <TextView
            android:id="@+id/teamName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/team_name"
            android:textSize="20sp"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="10dp">

            <ImageView
                android:id="@+id/badgeImage"
                android:layout_weight="5"
                android:layout_width="0dp"
                android:layout_height="180dp"/>
            <ImageView
                android:id="@+id/jerseyImage"
                android:layout_weight="5"
                android:layout_width="0dp"
                android:layout_height="180dp"
                />

        </LinearLayout>
        <TextView
            android:id="@+id/foundationYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/foundation_year"
            android:textSize="16sp"
            android:layout_marginVertical="10dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginVertical="10dp">
            <ImageView
                android:id="@+id/website"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_internet"
                android:layout_marginHorizontal="10dp"
                android:onClick="openWebsite"/>
            <ImageView
                android:id="@+id/facebook"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginHorizontal="10dp"
                android:src="@drawable/ic_facebook"
                android:onClick="openFacebook"/>
            <ImageView
                android:id="@+id/instagram"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginHorizontal="10dp"
                android:src="@drawable/ic_instagram"
                android:onClick="openInstagram"/>
            <ImageView
                android:id="@+id/twitter"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginHorizontal="10dp"
                android:src="@drawable/ic_twitter"
                android:onClick="openTwitter"/>
            <ImageView
                android:id="@+id/youtube"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginHorizontal="10dp"
                android:src="@drawable/ic_youtube"
                android:onClick="openYoutube"/>
        </LinearLayout>

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="16sp"
            android:layout_marginVertical="10dp"
            />

        <TextView
            android:id="@+id/eventsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next_events"
            android:textSize="17sp"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    </LinearLayout>


</androidx.core.widget.NestedScrollView>